src/main/java/com/example/demo/global/exception/error/DuplicatedMemberException.java
package com.example.demo.global.exception.error;

public class DuplicatedMemberException extends RuntimeException {
    public DuplicatedMemberException() {
        super();
    }
}
